# Robody

./: .gitignore  ARCHITECTURE.md  BODY_CONTROL.md  CONSOLIDATION_REVIEW.md  CURRENT.md  MARSHLAIR_SSH_TIPS.md  README.md  dream_experiment_results.md  dream_interpretation_experiment.md  how_robody_dreams.md  phase4_variants.py  robody_architecture_full.md  robody_brainstem_notes.md  robody_conceptnet_import.py  robody_consciousness.py  robody_daemon.py  robody_dream_architecture.md  robody_graph_seed.py  robody_graph_walker.py  robody_heartbeat.py  robody_parts_list.md  robody_rational_expansion.py  robody_shopping_list.md  robody_staging_log.py  robody_test_pipeline.py  robody_weight_maintenance.py
docs/: sensors.md
ros/robody_drive/: CMakeLists.txt  package.xml
ros/robody_drive/launch/: drive.launch
ros/robody_drive/scripts/: mecanum_drive_node.py  motor_server.py  motor_server_wrapper.sh
scripts/: mecanum.py  mmwave_sensor.py  motor_test.py  ups_telemetry.py  voice_sensor.py
